nav list button position fixed on mobile

--- a/styles.css
+++ b/styles.css
@@ -198,6 +198,7 @@ nav ul li:hover::after {
 
 
 /* === DARK MODE BUTTONS === */
+
 #modebuttons {
     position: sticky;
     top: 1rem; /* Sticks to 1rem from top when scrolling */
@@ -403,14 +404,12 @@ footer {
 
 @media (max-width: 480px) {
 
-    nav ul {
-        display: none;
-    }
-
     header {
         display: grid;
         grid-template-columns: 1fr;
     }
+
+    /* === MOBILE-TITLE === */
 
     .title {
       font-size: 0.8rem;
@@ -421,12 +420,19 @@ footer {
         margin-top: 1rem;
     }
 
-    #mobilenav-and-modebuttons {
-        padding: 0 1rem;
-        margin-top: 0.5rem;
+    /* === MOBILE-NAV === */
+
+    nav ul {
+        display: none;
+    }
+
+    #mobilenavicon {
+        padding: 0;
+        margin-top: 1rem;
         margin-bottom: 0.5rem;
+        margin-right: 1rem;
         display: flex;
-        justify-content: space-between;
+        justify-content: flex-end;
         align-items: center;
     }
 
@@ -455,32 +461,42 @@ footer {
     #mobile-nav-list ul {
         display: flex;
         justify-content: space-evenly;
-        margin-top: 2rem;
+        margin-top: 2.5rem;
         padding: 0;
-        margin-bottom: -3rem;
+        margin-bottom: -2.5rem;
         font-size: 1.1rem;
         list-style: none;
         text-decoration: none;
+        
     }
 
     #mobile-nav-list ul li {
         display: inline-block;
         padding-bottom: 0;
         color: #87cefa;
+        
     }
 
     #mobile-nav-list ul li a {
         color: black;
         text-decoration: underline;
         list-style: none;
+        
+    }
+
+    #mobile-nav-list ul li a:active {
+        color: #87cefa;
+    }
+
+    body.dark-mode #mobile-nav-list ul li a:active {
+        color: #87cefa;
     }
 
     body.dark-mode #mobile-nav-list ul li a {
         color: white;
     }
 
-
-
+    /* === MOBILE-DARK MODE === */
 
     #modebuttons {
         margin-top: 0;
@@ -497,27 +513,35 @@ footer {
         width: 2rem;
         height: 2rem;
         margin: 0.2rem
-        }
+    }
+
+    /* === MOBILE-ABOUT ME === */
 
     #about-me {
         margin-top: -2rem;
             
     }
 
+    /* === MOBILE-TO THE TOP ARROW === */
+
     #arrow {
         right: 0.5rem;
         opacity: 0.5;
         
-        }
+    }
 
     #arrow:active {
         opacity: 0.7;
         transform: scale(0.5);
     }
 
+    /* === MOBILE-SKILLS === */
+
     #skills p {
         line-height: 1.3;
     }
+
+    /* === MOBILE-FORM === */
 
     form {
         text-align: center;
